--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "dependencies": {
+    "aws-iot-shadow-helper": "^0.2.1",
     "aws-sdk": "^2.349.0",
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
