--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "express": "^4.16.4",
     "node-gyp": "^3.8.0",
     "pi-pins": "^1.0.2",
-    "rpio": "^0.9.23"
+    "rpio": "^0.9.23",
+    "yarn": "^1.12.3"
   }
 }
